--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.cookandroid.baeksae"
-        minSdk 21
+        minSdkVersion 21
         targetSdk 33
         versionCode 1
         versionName "1.0"
