--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
         android:theme="@style/Theme.Baeksae"
         tools:targetApi="31">
         <activity
+            android:name=".SettingActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".EasyDoctorActivity"
             android:exported="false">
             <meta-data
@@ -32,13 +39,6 @@
         </activity>
         <activity
             android:name=".TestActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".Tester"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
