--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
         android:theme="@style/Theme.Baeksae"
         tools:targetApi="31">
         <activity
+            android:name=".ChatbotActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".SettingActivity"
             android:exported="false">
             <meta-data
@@ -59,7 +66,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".NewsPageActivity"
+            android:name=".ViewPager.NewsPageActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
